# cmake_sdl_demo1

Minimal/: CMakeLists.txt
Minimal/src/: Scene.cpp  Scene.h  Timer.cpp  Timer.h  main.cpp
